# BSU

./: .gitignore  README.md
CV/: README.md
Summer Practice/Final MyPacMan/: MyPacMan.pro  README.md  appicon.rc  mainwindow.cpp  mainwindow.h  mainwindow.ui  pacman.cpp  pacman.h  resource.qrc  scores.txt  ui_mainwindow.h
Year 1/Development of Cross-Platform Applications/Lab1/: README.md
Year 1/Development of Cross-Platform Applications/Lab1/Lab1 CMake Qt/: CMakeLists.txt  array.cpp  array.h  main.cpp  matrix.cpp  matrix.h  number.cpp  number.h
Year 1/Development of Cross-Platform Applications/Lab1/Lab1 CMake STL/: CMakeLists.txt  array.cpp  array.h  main.cpp  matrix.cpp  matrix.h  number.cpp  number.h
Year 1/Development of Cross-Platform Applications/Lab2/: CMakeLists.txt  Input.txt  README.md  main.cpp
Year 1/Development of Cross-Platform Applications/Lab3/: README.md
Year 1/Development of Cross-Platform Applications/Lab3/Lab3 CMake Qt/: CMakeLists.txt  (+2 more)
Year 1/Fundamentals & Methodologies of Programming/: README.md
Year 1/Fundamentals & Methodologies of Programming/Lab1-2/: CMakeLists.txt  README.md  main.cpp
Year 1/Fundamentals & Methodologies of Programming/Lab10/: CMakeLists.txt  InputQueue.txt  InputStack.txt  README.md  customer.cpp  customer.h  main.cpp
Year 1/Fundamentals & Methodologies of Programming/Lab3/: CMakeLists.txt  README.md  main.cpp
Year 1/Fundamentals & Methodologies of Programming/Lab4/: CMakeLists.txt  README.md  main.cpp
Year 1/Fundamentals & Methodologies of Programming/Lab5/: CMakeLists.txt  README.md  main.cpp
Year 1/Fundamentals & Methodologies of Programming/Lab5.1/: CMakeLists.txt  README.md  main.cpp
Year 1/Fundamentals & Methodologies of Programming/Lab5_1/: CMakeLists.txt  README.md
Year 1/Fundamentals & Methodologies of Programming/Lab6/: CMakeLists.txt  Input.txt  README.md  main.cpp
Year 1/Fundamentals & Methodologies of Programming/Lab7/: CMakeLists.txt  Input.txt  README.md  main.cpp  person.h
Year 1/Fundamentals & Methodologies of Programming/Lab8/: CMakeLists.txt  README.md  main.cpp  number.cpp  number.h
Year 1/Fundamentals & Methodologies of Programming/Lab9/: CMakeLists.txt  README.md  deposit.cpp  deposit.h  main.cpp  my_array.cpp  my_array.h
Year 1/Machine-Oriented Programming/: README.md
Year 1/Machine-Oriented Programming/Lab1/: CMakeLists.txt  README.md  main.cpp
Year 1/Machine-Oriented Programming/Lab2/: CMakeLists.txt  README.md  main.cpp
Year 1/Machine-Oriented Programming/Lab3/: CMakeLists.txt  README.md  main.cpp
Year 1/Machine-Oriented Programming/Lab4/: CMakeLists.txt  README.md  main.cpp
Year 1/Machine-Oriented Programming/Lab5/: CMakeLists.txt  README.md  main.cpp
Year 1/Machine-Oriented Programming/Lab6/: CMakeLists.txt  README.md  main.cpp
Year 1/Machine-Oriented Programming/Lab7/: CMakeLists.txt  README.md  main.cpp
Year 1/Machine-Oriented Programming/Lab8/: CMakeLists.txt  README.md  functions.asm  main.cpp
Year 2/: README.md
Year 2/Algorithms/: README.md
Year 2/Algorithms/0.0/: main.cpp
Year 2/Algorithms/BST/: README.md
Year 2/Algorithms/Data Structures/: README.md
Year 2/Algorithms/Graphs/: README.md
Year 2/Algorithms/Recurrence Relations/: README.md
Year 2/Industrial Programming/: README.md
Year 2/Industrial Programming/Lab1/: README.md
Year 2/Industrial Programming/Lab2/: README.md
Year 2/Industrial Programming/Lab3/: README.md
Year 2/Industrial Programming/Lab4/: README.md  input.txt  makefile.lin  makefile.win  output.txt
Year 2/Industrial Programming/Lab4 Individual/: README.md  makefile.lin  makefile.win
Year 2/Industrial Programming/Lab5/: README.md
Year 2/Industrial Programming/Lab6-7/: README.md
Year 2/Industrial Programming/Lab8/: README.md  bills.txt
Year 2/Operating Systems/: README.md
Year 2/Operating Systems/Colloquium1/: README.md
Year 2/Operating Systems/Colloquium2/: README.md  docker-compose.yml  prometheus.yml
Year 2/Operating Systems/Lab1/: Lab1.sln  Lab1.vcxproj  README.md
Year 2/Operating Systems/Lab1/Lab1 CMake C++98/: CMakeLists.txt
Year 2/Operating Systems/Lab1/Lab1 CMake C++98/src/: creator.cpp  employee.cpp  main.cpp  reporter.cpp
Year 2/Operating Systems/Lab1/Lab1 CMake C++98/tests/: CMakeLists.txt  test.cpp
Year 2/Operating Systems/Lab1/Lab1 CMake Solution/EmployeeTests/: CMakeLists.txt  test.cpp
Year 2/Operating Systems/Lab2/: README.md
Year 2/Operating Systems/Lab2/Lab2 CMake/: CMakeLists.txt
Year 2/Operating Systems/Lab2/Lab2 CMake C++98/tests/: CMakeLists.txt  test_threads.cpp
Year 2/Operating Systems/Lab2/Lab2 CMake/include/: data.h  minmax.h
Year 2/Operating Systems/Lab2/Lab2 CMake/libs/threadlib/: minmax.cpp
Year 2/Operating Systems/Lab2/Lab2 CMake/src/: main.cpp
Year 2/Operating Systems/Lab2/Lab2 CMake/tests/: CMakeLists.txt
Year 2/Operating Systems/Lab3/: README.md
Year 2/Operating Systems/Lab3/Lab3 CMake C++98/: CMakeLists.txt
Year 2/Operating Systems/Lab3/Lab3 CMake C++98/include/: array.h  marker.h
Year 2/Operating Systems/Lab3/Lab3 CMake C++98/src/: array.cpp  main.cpp  marker.cpp
Year 2/Operating Systems/Lab3/Lab3 CMake C++98/tests/: CMakeLists.txt  test.cpp
Year 2/Operating Systems/Lab4/: README.md
Year 2/Operating Systems/Lab4/Lab4 CMake C++98/: CMakeLists.txt
Year 2/Operating Systems/Lab4/Lab4 CMake C++98/include/: common.h
Year 2/Operating Systems/Lab4/Lab4 CMake C++98/src/: receiver.cpp  sender.cpp
Year 2/Operating Systems/Lab4/Lab4 CMake C++98/tests/: test.cpp
Year 2/Operating Systems/Lab5/: README.md
Year 2/Operating Systems/Lab5/Lab5 CMake C++23/: CMakeLists.txt
Year 2/Operating Systems/Lab5/Lab5 CMake C++23/src/: client.cpp  server.cpp
Year 2/Operating Systems/Lab5/Lab5 CMake C++23/tests/: CMakeLists.txt  test.cpp
Year 2/Operating Systems/Сolloquium1/: CMakeLists.txt
Year 2/Operating Systems/Сolloquium1/include/: linked_list.h
Year 2/Operating Systems/Сolloquium1/src/: linked_list.cpp  main.cpp  server.cpp  unique.cpp
Year 2/Operating Systems/Сolloquium1/tests/: CMakeLists.txt  test_factorial.cpp  test_unique.cpp
(+321 files in other folders)
